# example-pyproject

./: mkdocs.yml  pyproject.toml
docs/: index.md
