[project]
name = "example-pyproject"
version = "0.0.1a1"
description = "Example Packaing Project"
license = "MIT"
license-files = "LICENSE.txt"
authors = [
    {name = "Maggie May", email = "maggie.may@gmail.com"}
]
maintainers = [
    {name = "Scott Smith", email = "scott.smith@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy"
]



